[package]
name = "ice-frost"
version = "0.1.0"
authors = [
    "isis lovecruft <isis@patternsinthevoid.net>",
    "Toposware Developers <dev@toposware.com>"
]
edition = "2018"
description = "ICE-FROST: Identifiable Cheating Entity Flexible Round-Optimised Threshold Signature using the Ristretto group"
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/Toposware/frost"
homepage = "https://github.com/ToposWare/frost"
keywords = ["cryptography", "frost", "ice-frost", "ristretto", "signature", "threshold-signature"]
categories = ["cryptography"]
exclude = [ ".gitignore" ]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "/opt/rustwide/workdir/docs/assets/rustdoc-include-katex-header.html"]

[dependencies]
curve25519-dalek = { version = "3", default-features = false }
ed25519-dalek = { version = "1", default-features = false }
rand = { version = "0.7", default-features = false, features = ["alloc", "getrandom", "libc"] }
sha2 = { version = "0.9", default-features = false }
subtle = { version = "2.4", default-features = false }
zeroize = { version = "1", default-features = false, features = ["zeroize_derive"] }
aes = { version = "0.7", default-features = false, features = ["ctr"] }
hkdf = { version = "0.11", default-features = false }

[dev-dependencies]
criterion = { version = "0.3" }

[[bench]]
name = "dalek_benchmarks"
harness = false

[features]
default = ["std", "u64_backend"]

nightly = ["curve25519-dalek/nightly", "ed25519-dalek/nightly"]
std = ["curve25519-dalek/std", "ed25519-dalek/std"]
alloc = ["curve25519-dalek/alloc", "ed25519-dalek/alloc"]

# The u32 backend uses u32s with u64 products.
u32_backend = ["curve25519-dalek/u32_backend", "ed25519-dalek/u32_backend"]
# The u64 backend uses u64s with u128 products.
u64_backend = ["curve25519-dalek/u64_backend", "ed25519-dalek/u64_backend"]
# The SIMD backend uses parallel formulas, using either AVX2 or AVX512-IFMA.
simd_backend = ["curve25519-dalek/simd_backend", "ed25519-dalek/simd_backend"]
